gui/manager_pkg/log/build_2024-06-05_15-25-46/manager_pkg/stderr.log
  File "/home/addinedu/ros-repo-2/gui/manager_pkg/install/manager_pkg/lib/python3.10/site-packages/manager_pkg/manager_main.py", line 15
    >>>>>>> 75a130c5d2a5987b926194b7fea4e6d9c4496b1d
             ^
SyntaxError: invalid decimal literal

